@@ -8,6 +8,7 @@ release 57.6.0
   tag zero product) has multiple studies and references
 - fix haplotype caller check for a PCR free library type to be case
   insensitive
+- increase memory for bqsr and haplotype caller jobs
 
 release 57.5.1
 - bug fix - correct node id in splice (for GbS) 
